[package]
name = "finalproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
anyhow = "1.0"
petgraph = "0.6"
graphrs = "0.9.0"